--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div>
+      <canvas id="myCanvas"></canvas>
+    </div>
+    <script src="/controls.js"></script>
+    <script src="/car.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
