--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div>
       <canvas id="myCanvas"></canvas>
     </div>
+    <script src="/util.js"></script>
+    <script src="/road.js"></script>
     <script src="/controls.js"></script>
     <script src="/car.js"></script>
     <script src="/main.js"></script>
