--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="/util.js"></script>
     <script src="/road.js"></script>
     <script src="/controls.js"></script>
+    <script src="/sensor.js"></script>
     <script src="/car.js"></script>
     <script src="/main.js"></script>
   </body>
